# nustar-gen-utils

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: changelog.rst  conf.py  diagnostic.rst  index.rst  info.rst  io.rst  radial_profile.rst  readme.rst  straylight.rst  utils.rst  wrappers.rst
notebooks/: DeconvolutionExample.ipynb  GOES_example.ipynb  GTI Example.ipynb  GTI_filter_solar_flare.ipynb  LightcurveExample.ipynb  Observation Example.ipynb  OptimalRadius_Example.ipynb  Solar_flare_Example.ipynb  StrayLightBackground_example.ipynb  StraylightWrapperExample.ipynb  TimeExample.ipynb  WrapperExample.ipynb
notebooks/example_data/30001039002/event_cl/: srcA01.reg
notebooks/example_data/30002041016/: 30002041016A_StrayCatsI_704.reg  nu30002041016A01_cl_3to20keV_det1.fits  nu30002041016_sky2detA.fits
nustar_gen/: __init__.py  _astropy_init.py  cython_version.py  diagnostic.py  info.py  io.py  radial_profile.py  utils.py  version.py  wrappers.py
nustar_gen/templates/: be.arf  diag.rmf  nu40101010002_srcA_sr.arf  usrgti.fits
scripts/: README.md  run_nupipeline.sh  run_nupipeline_highrate.sh  run_nupipeline_highrate_noshield.sh
