[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
; minversion = 3.0
; norecursedirs = build docs/_build
; doctest_plus = enabled
; addopts = -p no:warnings
testpaths = "nustar_gen" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
name = nustar_gen
description =  NuSTAR Python Utilities and Wrappers
long_description =  NuSTAR Python Utilities
author = Brian Grefenstette
author_email = bwgref@caltech.edu
license = LICENSE.rst
url = ""
edit_on_github = False
github_project = nustar-gen-utils


[options]
zip_safe = False
packages = find:
install_requires = 
    numpy
    matplotlib
    astropy
    jupyter
    h5py
    scikit-image
    sphinx
    sphinx_rtd_theme
    regions
python_requires = >=3.6
setup_requires = setuptools_scm


[options.extras_require]
test =
    pytest-astropy
    matplotlib
docs =
    sphinx-astropy

[options.package_data]
* = *.fits, *.csv
my_package.templates = *

[entry_points]

;astropy-package-template-example = packagename.example_mod:main

